[package]
name = "tickvault-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "calendar"
harness = false

[[bench]]
name = "config"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "figment", "secrecy", "toml", "tracing", "uuid"]
