[package]
name = "tickvault-common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
arc-swap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
rkyv = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }
uuid = { workspace = true }
arrayvec = { workspace = true }
# tokio (workspace-pinned): used ONLY for the `broker_order_events::push_active`
# watch channel — the Session-3 order-update PUSH-active seam that lives in
# `common` so a future core/app producer + a trading consumer share it without
# either depending on `tickvault-trading` (Groww orders PR-A0, 2026-07-15).
tokio = { workspace = true }

# CVE pins (2026-04-22, Parthiban-authorised). Unused direct deps that
# exist solely to force `cargo`'s lockfile resolver to pick patched
# versions of TLS/crypto transitives flagged by dependabot. We use this
# mechanism because:
#   - `cargo update` is project-banned (.claude pre-tool hook).
#   - `[patch.crates-io]` cannot redirect a crate to a different version
#     within the same source.
# The cargo-machete ignored list below silences the unused-dep warning.
# Reviewer note: deletion of these lines reverts the lockfile to vulnerable
# versions on the next `cargo build`, so DO NOT remove without re-issuing
# the upgrade through whatever new mechanism replaces this.
#
# Patched CVEs:
#   aws-lc-sys 0.38.0 → 0.40.0: AWS-LC X.509 Name Constraints Bypass (HIGH)
#                              + CRL Distribution Point Scope Check (HIGH)
#   rustls-webpki 0.103.9 → 0.103.13: CRLs-not-authoritative (Moderate)
#                                   + Name-constraints-wildcard (Low)
#                                   + URI-name-constraints (Low)
#   rand 0.9.2 → 0.9.4: rand::rng() unsound with custom logger (Low)
# Note: rand 0.8.5 also remains in the lockfile (transitive via getrandom
# v0.2 path) but the CVE applies to the 0.9.x rand::rng() API only.
# rustls-webpki 0.101.7 also remains, pulled in by tokio-rustls 0.24.1
# which is a deep AWS SDK transitive (aws-smithy-http-client 1.1.12).
# Bumping the AWS SDK suite is a major change deferred to its own PR.
aws-lc-sys = "0.43.0"
aws-lc-rs = "1.17.0"
rustls-webpki = "0.103.13"
rand = "0.10.1"

[features]
# Gate 2 of the Groww order-side live-fire lattice (groww-second-feed-scope
# §39.2). NON-DEFAULT — the broker_order_events seam is always compiled, but
# this feature marks the order-side build surface so the lattice guard can
# assert it exists in BOTH manifests and is never in a `default = [...]` set.
groww_orders = []

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "calendar"
harness = false

[[bench]]
name = "config"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "figment", "secrecy", "toml", "tracing", "uuid", "aws-lc-sys", "aws-lc-rs", "rustls-webpki", "rand"]
