[package]
name = "tickvault-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tickvault-storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
zerocopy = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
arc-swap = { workspace = true }
rtrb = { workspace = true }
papaya = { workspace = true }
arrayvec = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
backon = { workspace = true }
ahash = { workspace = true }
totp-rs = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sns = { workspace = true }
aws-sdk-ssm = { workspace = true }
failsafe = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
memmap2 = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
loom = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
dhat = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "tick_parser"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "instrument_registry"
harness = false

[[bench]]
name = "token_handle"
harness = false

[[bench]]
name = "ws_reader_frame_handle"
harness = false

[[bench]]
name = "phase2_dispatch"
harness = false

[package.metadata.cargo-machete]
ignored = ["ahash", "arrayvec", "bytes", "chrono-tz", "failsafe", "loom", "papaya", "rtrb", "zerocopy"]
