[package]
name = "tickvault-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tickvault-storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
arc-swap = { workspace = true }
rtrb = { workspace = true }
papaya = { workspace = true }
arrayvec = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
ahash = { workspace = true }
totp-rs = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sns = { workspace = true }
aws-sdk-ssm = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
memmap2 = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
loom = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]
dhat = []
# Sub-PR #1.5 + #3 of 2026-05-27 daily-universe expansion: gates the
# CSV-downloader + universe-fetcher code paths. Activation lands in
# Sub-PR #9 (lifecycle reconciler) + Sub-PR #10 (boot orchestrator) —
# until then the feature is dormant and the gated code is dead. Per
# `.claude/rules/project/daily-universe-scope-expansion-2026-05-27.md` §21.
# PR-A (2026-06-28): forwards to storage so the gated
# `index_constituency_persistence` module (which the Groww shared-master writer
# reuses) is compiled whenever core's `daily_universe_fetcher` is enabled.
daily_universe_fetcher = ["tickvault-storage/daily_universe_fetcher"]

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
dhat = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
# full_tick_processing bench only: install the SAME recorder family
# production uses (workspace-pinned, already a crates/app dependency) so
# per-tick counter/histogram costs are measured against real registry
# atomics, not the no-op recorder.
metrics-exporter-prometheus = { workspace = true }

[[bench]]
name = "tick_parser"
harness = false

[[bench]]
name = "full_tick_processing"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "instrument_registry"
harness = false

[[bench]]
name = "token_handle"
harness = false

[[bench]]
name = "ws_reader_frame_handle"
harness = false

[[bench]]
name = "prev_close_writer"
harness = false

[[bench]]
name = "tick_gap_detector"
harness = false

[[bench]]
name = "slo_score"
harness = false

[package.metadata.cargo-machete]
ignored = ["ahash", "arrayvec", "bytes", "chrono-tz", "failsafe", "loom", "papaya", "rtrb"]
