[package]
name = "tickvault-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tickvault-storage = { path = "../storage" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
arc-swap = { workspace = true }
rtrb = { workspace = true }
papaya = { workspace = true }
arrayvec = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
csv = { workspace = true }
ahash = { workspace = true }
totp-rs = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sns = { workspace = true }
aws-sdk-ssm = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }
memmap2 = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
# Groww native shadow client (PR-R1, 2026-07-04): ed25519 nkey session keypair
# + NATS nonce signing. Already in the tree via rustls; direct for the API.
aws-lc-rs = { workspace = true }
# Groww native shadow client (PR-R1): fresh x-request-id per socket-token mint.
uuid = { workspace = true }
loom = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]
dhat = []
# PR-C3 (2026-07-14): the `daily_universe_fetcher` feature was DELETED with
# the Dhan instrument-download chain (operator retirement directive
# 2026-07-13, scope-lock amendment §B). The formerly-gated storage modules
# (lifecycle/constituency/fetch-audit persistence + the pure reconciler the
# Groww shared-master writer consumes) are now compiled unconditionally.

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
dhat = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
# full_tick_processing bench only: install the SAME recorder family
# production uses (workspace-pinned, already a crates/app dependency) so
# per-tick counter/histogram costs are measured against real registry
# atomics, not the no-op recorder.
metrics-exporter-prometheus = { workspace = true }

[[bench]]
name = "tick_parser"
harness = false

[[bench]]
name = "full_tick_processing"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "instrument_registry"
harness = false

[[bench]]
name = "token_handle"
harness = false

[[bench]]
name = "ws_reader_frame_handle"
harness = false

[[bench]]
name = "prev_close_writer"
harness = false

[[bench]]
name = "tick_gap_detector"
harness = false

[[bench]]
name = "slo_score"
harness = false

[[bench]]
name = "feed_lag_ring"
harness = false

[[bench]]
name = "feed_presence"
harness = false

# PR-C3 (2026-07-14): the `ntm_subscription_proof` example entry was deleted
# with the Dhan instrument chain + the `daily_universe_fetcher` feature
# (operator retirement directive 2026-07-13, scope-lock amendment §B).

[package.metadata.cargo-machete]
ignored = ["ahash", "arrayvec", "bytes", "chrono-tz", "failsafe", "loom", "papaya", "rtrb"]
