[package]
name = "dhan-live-trader-frontend-wasm"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
license = "MIT"
description = "WASM indicator engine for the DLT trading terminal"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
