[package]
name = "tickvault-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
metrics = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
questdb-rs = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "tick_persistence"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "deadpool-redis", "metrics", "questdb-rs", "redis", "serde", "serde_json", "thiserror"]
