[package]
name = "tickvault-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
# Wave 6 Sub-PR #1 item 1.2c (2026-05-10): storage-side conversion
# `From<&BufferedSeal> for SerializedSeal` needs the trading-side
# `BufferedSeal` + `TfIndex` types. The dep edge `trading ← storage`
# is architecturally allowed per CLAUDE.md "Dependency flow:
# common ← core ← trading ← storage ← api ← app"; this is just
# wiring it.
tickvault-trading = { path = "../trading" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
metrics = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
questdb-rs = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
# Candle-engine re-architecture #T1a Finding S2: the ShadowCandleWriter
# ILP conf string is wrapped in `Secret<String>` so it is never logged
# via Debug.
secrecy = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "tick_persistence"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "deadpool-redis", "metrics", "questdb-rs", "redis", "serde", "serde_json", "thiserror"]
