[package]
name = "tickvault-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
# Wave 6 Sub-PR #1 item 1.2c (2026-05-10): storage-side conversion
# `From<&BufferedSeal> for SerializedSeal` needs the trading-side
# `BufferedSeal` + `TfIndex` types. The dep edge `trading ← storage`
# is architecturally allowed per CLAUDE.md "Dependency flow:
# common ← core ← trading ← storage ← api ← app"; this is just
# wiring it.
tickvault-trading = { path = "../trading" }
tokio = { workspace = true }
# Zero-tick-loss PR-8a (H1): the WS read loop hands the WAL spill a `Bytes`
# (Arc-refcounted, O(1) clone) instead of a per-frame `Vec<u8>` malloc.
# Workspace-pinned (same version core/app already use).
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
metrics = { workspace = true }
questdb-rs = { workspace = true }
reqwest = { workspace = true }
crossbeam-channel = { workspace = true }
# Candle-engine re-architecture #T1a Finding S2: the ShadowCandleWriter
# ILP conf string is wrapped in `Secret<String>` so it is never logged
# via Debug.
secrecy = { workspace = true }
# 2026-07-13 partition archive→verify→drop (disk-pressure remediation):
# S3 upload/head for the verified partition archive (aws-sdk-s3 authorized
# per groww-second-feed-scope §37 2026-07-12) + gzip for the streamed
# QuestDB /exp CSV export (flate2 already in the lock via tower-http).
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
flate2 = { workspace = true }
# Review round 2 (2026-07-13): SHA-256 content identity for the S3
# reuse/conflict decision (workspace-pinned; the app crate already uses it).
sha2 = { workspace = true }

[features]
# Sub-PR #10b-ε of 2026-05-27 daily-universe expansion: gates the
# `instrument_fetch_audit` table contract (schema constants + DEDUP key +
# FetchOutcome enum). Mirrors the `tickvault-core` feature gate per
# `.claude/rules/project/daily-universe-scope-expansion-2026-05-27.md` §21
# — until Sub-PR #10b-ζ ships the DDL + append helpers AND the boot
# orchestrator wires it, this feature is dormant and the gated code is
# dead. No default feature.
daily_universe_fetcher = []

[dev-dependencies]
criterion = { workspace = true }
# partition_archive_guard.rs parses config/base.toml to pin archive_enabled.
toml = { workspace = true }
dhat = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[[bench]]
name = "tick_persistence"
harness = false

[package.metadata.cargo-machete]
ignored = ["chrono-tz", "metrics", "questdb-rs", "serde", "serde_json", "thiserror"]
