[package]
name = "dhan-live-trader-trading"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dhan-live-trader-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
statig = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["anyhow", "chrono", "chrono-tz", "dhan-live-trader-common", "governor", "serde", "statig", "thiserror", "tokio", "tracing", "uuid"]
