[package]
name = "dhan-live-trader-trading"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dhan-live-trader-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
metrics = { workspace = true }
jaeckel = { workspace = true }
loom = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]

[dev-dependencies]
dhan-live-trader-core = { path = "../core" }
criterion = { workspace = true }
dhat = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "oms"
harness = false

[[bench]]
name = "obi"
harness = false

[package.metadata.cargo-machete]
ignored = ["anyhow", "chrono", "chrono-tz", "dhan-live-trader-common", "governor", "jaeckel", "loom", "metrics", "secrecy", "serde", "thiserror", "tokio", "tracing", "uuid"]
