[package]
name = "tickvault-trading"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tickvault-common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
uuid = { workspace = true }
governor = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
metrics = { workspace = true }
papaya = { workspace = true }
parking_lot = { workspace = true }
loom = { workspace = true, optional = true }
# Order-push Stage B (2026-07-16): NATS-over-WS transport deps for the gated
# `oms/groww/push` module — optional, pulled in ONLY by `groww_orders`.
aws-lc-rs = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
# Order-push Stage C (2026-07-16): SinkExt/StreamExt for the supervised
# runner's split WebSocket read/write halves. Already workspace-pinned
# (0.3.32, used by tickvault-core) — optional, pulled in ONLY by
# `groww_orders`.
futures-util = { workspace = true, optional = true }

[features]
loom = ["dep:loom"]
# Gate 2 of the Groww order-side live-fire lattice (groww-second-feed-scope
# §39.2). NON-DEFAULT: a default build excludes the entire
# crates/trading/src/oms/groww subtree. Order-push Stage B adds the transport
# deps (ed25519 nkey signing + the WS client for Stage C).
groww_orders = ["dep:aws-lc-rs", "dep:tokio-tungstenite", "dep:futures-util"]

[dev-dependencies]
tickvault-core = { path = "../core" }
criterion = { workspace = true }
dhat = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "oms"
harness = false

[[bench]]
name = "obi"
harness = false

[[bench]]
name = "bar_cache_lookup"
harness = false

[package.metadata.cargo-machete]
ignored = ["anyhow", "aws-lc-rs", "chrono", "chrono-tz", "tickvault-common", "governor", "jaeckel", "loom", "metrics", "secrecy", "serde", "thiserror", "tokio", "tokio-tungstenite", "tracing", "uuid"]
